@@ -1,3 +1,8 @@
+-- --
+* Fixed missing sorting in most places
+* Fixed crash on startup when missing Certificates folder
+* Fixed right-click menu with nested user commands
+
 -- 0.701 2007-10-18 --
 * Fixed an upload bug
 * Reworked some context menu stuff
